feat: Rename application to Receipt manager pro
Updates the application name and related identifiers across project configuration, UI elements, and file names for branding consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rupeereceipts-manager",
+  "name": "receipt-manager-pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
